# Habit-Stack

./: .gitignore  .sesskey  CLAUDE.md  DEPLOYMENT.md  README.md  app.py  auth.py  birthdays.py  database.py  habits.py  models.py  notes.py  pyproject.toml  reading.py  settings.py  sports.py  todos.py  utils.py  watchlist.py
models/: __init__.py  base_encrypted.py  birthday.py  data_manager.py  habit.py  note.py  reading.py  sports.py  todo.py  user.py  watchlist.py
static/: manifest.json  sw.js
templates/: add_birthday_page.html  add_book_page.html  add_habit_form.html  add_habit_page.html  add_movie_page.html  add_todo_page.html  base.html  birthdays.html  dashboard.html  edit_birthday_page.html  edit_book_page.html  edit_habit_form.html  edit_habit_page.html  edit_movie_page.html  edit_todo_page.html  habit_card.html  habits_container.html  landing.html  login.html  manage_habits.html  navbar.html  notes.html  points_display.html  reading.html  settings.html  signup.html  sports.html  todos.html  watchlist.html
templates/components/: account_settings.html  data_export.html  data_import.html  privacy_encryption.html
utils/: __init__.py  encryption.py  field_registry.py  migration.py  preferences.py
