[project]
name = "habitstack"
version = "0.1.0"
description = "Cross-platform daily habit tracker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.0",
    "sqlite-utils>=3.34",
    "bcrypt>=4.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
    "lxml>=4.9.0",
    "rich>=13.0.0"
]
